# xonotic-data.pk3dir

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  TermsOfService  _hud_common.cfg  _hud_descriptions.cfg  annoy_balance.cfg  autoexec.cfg  bal-wep-jaska.cfg  bal-wep-legacyxdf.cfg  bal-wep-mario.cfg  bal-wep-nexuiz25.cfg  bal-wep-overkill-nerfed.cfg  bal-wep-overkill.cfg  bal-wep-rev.cfg  bal-wep-samual.cfg  bal-wep-testing.cfg  bal-wep-testingxpm.cfg  bal-wep-xdf.cfg  bal-wep-xonotic.cfg  bal-wep-xpm.cfg  balance-instahook.cfg  balance-legacyxdf.cfg  balance-mario.cfg  balance-nexuiz25.cfg  balance-overkill.cfg  balance-rev.cfg  balance-samual.cfg  balance-testing.cfg  balance-testingxpm.cfg  balance-xdf.cfg  balance-xonotic.cfg  balance-xpm.cfg  balance.cfg  balance25.cfg  balanceFruit.cfg  balanceFruitieX.cfg  balanceLeeStricklin.cfg  (+312 more)
.tx/: config  merge-base
cmake/: CMakeASMCompiler.cmake.in  CMakeASMInformation.cmake  CMakeDetermineASMCompiler.cmake  CMakeTestASMCompiler.cmake  qcc.sh
data/: campaign.cfg
demos/: little-bot-orchestra.dem  the-big-keybench.dem
gfx/: blood.tga  colormap_palette.lmp  colormap_palette.pl  conback.tga  conback2.tga  conback3.tga  crosshair1.tga  crosshair10.tga  crosshair11.tga  crosshair12.tga  crosshair13.tga  crosshair14.tga  crosshair15.tga  crosshair16.tga  crosshair17.tga  crosshair2.tga  crosshair20.tga  crosshair21.tga  crosshair22.tga  crosshair23.tga  crosshair24.tga  crosshair25.tga  crosshair26.tga  crosshair27.tga  crosshair28.tga  crosshair29.tga  crosshair3.tga  crosshair30.tga  crosshair31.tga  crosshair32.tga  crosshair33.tga  crosshair34.tga  crosshair35.tga  crosshair36.tga  crosshair37.tga  crosshair38.tga  crosshair39.tga  crosshair4.tga  crosshair40.tga  crosshair41.tga  (+81 more)
gfx/flags/: 0.tga  1.tga  10.tga  100.tga  101.tga  102.tga  103.tga  104.tga  105.tga  106.tga  107.tga  108.tga  109.tga  11.tga  110.tga  111.tga  112.tga  113.tga  114.tga  115.tga  116.tga  117.tga  118.tga  119.tga  12.tga  120.tga  121.tga  122.tga  123.tga  124.tga  125.tga  126.tga  127.tga  128.tga  129.tga  13.tga  130.tga  131.tga  132.tga  133.tga  (+201 more)
gfx/hud/: borderx.tga  sb_health.tga
gfx/medal/: accuracy.tga  airshot.tga  assist.tga  capture.tga  defense.tga  electrobitch.tga  excellent.tga  firstblood.tga  headshot.tga  humiliation.tga  impressive.tga  killstreak_03.tga  killstreak_05.tga  killstreak_10.tga  killstreak_15.tga  perfect.tga  telefrag.tga  yoda.tga
gfx/scoreboard/: accuracy_bg.tga  player_handicap.tga  player_ignored.tga  player_ready.tga  player_self.tga  playercolor_base.tga  playercolor_pants.tga  playercolor_shirt.tga  scoreboard_bg.tga  scoreboard_tableheader.tga
gfx/trails/: plain.tga
gfx/vehicles/: axh-bracket.tga  axh-cross.tga  axh-dropcross.tga  axh-rings.tga  axh-special1.tga  axh-special2.tga  axh-tag.tga  axh-target.tga  axh-x.tga  bar_dwn_left.tga  bar_dwn_right.tga  bar_up_left.tga  bar_up_right.tga  bullets.tga  bumb.tga  bumb_lgun.tga  bumb_rgun.tga  bumb_side.tga  bumb_side_gun.tga  crosshair_burst.tga  crosshair_drop.tga  crosshair_guide.tga  crosshair_heal.tga  crosshair_hint.tga  crosshair_lock.tga  crosshair_rain.tga  crosshair_tag.tga  dropcross.tga  energy.tga  frame.tga  health.tga  raptor.tga  raptor_bombs.tga  raptor_guns.tga  rocket.tga  sbot-xhair2.tga  sbot.tga  shield.tga  turret_stationary.tga  vth-mover.tga  (+3 more)
maps/: campaignxonoticbeta.txt.en_AU  campaignxonoticbeta.txt.en_GB  campaignxonoticbeta.txt.fr  campaignxonoticbeta.txt.zh_CN  campaignxonoticbeta.txt.zh_HK  campaignxonoticbeta.txt.zh_TW  gravity_test.bsp  gravity_test.map  minelayer_test.bsp  minelayer_test.map
minigames/bulldozer/: storage_level1.txt  storage_level10.txt  storage_level11.txt  storage_level12.txt  storage_level13.txt  storage_level2.txt  (+9 more)
models/: arctrail.mdl_0.skin  casing_bronze.iqm  casing_bronze.tga  casing_bronze_gloss.tga  casing_bronze_norm.tga  elaser.mdl  grenademodel.md3  hlac_bullet.md3  hlac_bullet.tga  hook.md3  laser.mdl  marker.md3  mine.md3  mtree01.md3  mtree02.md3  mtree03.md3  nexflash.md3  plasmatrail.mdl  portal.md3  portal.md3_0.skin  portal.md3_1.skin  portal.md3_2.skin  rocket.md3  uziflash.md3
particles/: gauntletbeam.tga  hook_blue.tga  hook_green.tga  hook_pink.tga  hook_red.tga  hook_white.tga  hook_yellow.tga  lgbeam.tga  particlefont-template.txt  particlefont.pl  particlefont.tga
qcsrc/: .editorconfig  .gitignore  Doxyfile  Makefile  fteqcc-bugs.qc  i18n-guide.txt  qc-client.cbp  qc-common.cbp  qc-server.cbp  qcc.sh  uncrusticracy.sh  uncrustify.cfg  whitespace.sh  xonotic-gamecode.workspace
scripts/: akordeon.shader  barricade.shader  casings.shader  cellammo.Shader  cellammo.shader  cerberus.shader  crylink.shader  ctf.shader  default_project.proj  devastator.shader  electro.shader  entities.def  explosiveammo.shader  fireball.shader  flags.shader  gibs.shader  gl.shader  golem.shader  hagar.shader  hlac.shader  ice.shader  items.shader  leiprojectile.shader  liquids.shader  luma.shader  mage.shader  minigames.shader  mnex.shader  model-common.shader  monsters.shader  mortar.shader  nade_counter.shader  nades.shader  nanomage.shader  newsky_nebulae.txt  nexball.shader  ogre.shader  ok_nade_counter.shader  ok_player.shader  okplayers.shader  (+44 more)
textures/: Hagar_Reflect.tga  barricade.tga  barricade_norm.tga  bloodyskull_robot_pants.tga  campingrifle.tga  campingrifle_bump.tga  cockpit_gloss.tga  cockpit_reflect.tga  crylink.tga  crylink_gloss.tga  crylink_new_glow.tga  crylink_reflect.tga  draconi_female.tga  draconi_male.tga  electro.tga  electro_glow.tga  electro_norm.tga  electro_plasma_glow.tga  electro_reflect.tga  erebus_glow.tga  erebusfullbright_glow.tga  erebusfullbright_shirt.tga  fireball_glow.tga  fireball_pants.tga  fireball_shirt.tga  gak_shirt.tga  gakarmor.tga  gakarmor_gloss.tga  gakarmor_glow.tga  gakarmor_heightmap.tga  gakarmor_norm.tga  gakarmor_pants.tga  gakarmor_reflect.tga  gakarmor_shirt.tga  gakarmorfb_glow.tga  gakarmorfb_reflect.tga  gakarmorfb_shirt.tga  gakfullbright_shirt.tga  glauncher_glow.tga  glauncher_reflect.tga  (+132 more)
(+5407 files in other folders)
